# nonebot-plugin-cs2radar

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yml
nonebot_plugin_cs2radar/: __init__.py  binding_store.py  config.py  crawler.py  llm.py  match_service.py  renderer.py  storage.py
nonebot_plugin_cs2radar/templates/: match_detail.html  match_results.html  pw_stats.html  stats.html
